# ros_ws

./: .gitignore  connect-ps4.sh
backup/: bashrc
install/: local_setup.sh  setup.sh
log/: latest_build
ps4_scripts/: battery-ps4.sh  disconnect-ps4.sh
python_snip/: cam_test.py  svg_test.py  tempCodeRunnerFile.py
run_dir/recording/: pos.txt
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: cam_controller.py  command_type_switcher.py  config.py  gripper_trajectory_controller.py  ik_pub.py  joint_state_player.py  joint_state_recorder.py  joint_trajectory_controller.py  joy_joint_publisher.py  joy_twist_publisher.py
src/arm_controller/launch/: controller.launch.py
src/arm_controller_py/: package.xml  setup.cfg  setup.py
src/arm_controller_py/arm_controller_py/: command_type_switcher.py  gripper_trajectory_controller.py  joint_state_player.py  joint_state_recorder.py  joint_trajectory_controller.py  joy_twist_publisher.py  timestamp_remapper.py
src/arm_controller_py/launch/: controller.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: joint_names_8dof_description.yaml  joint_names_arm_description.yaml
src/arm_description/launch/: display.launch.py
src/arm_description/meshes/: base_link.STL  cam_link.STL  grip_left.STL  grip_left_link.STL  grip_right.STL  grip_right_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  tool_frame.STL  tool_link.STL
src/arm_description/rviz/: rviz.rviz
src/arm_description/urdf/: arm_description.csv  arm_description.urdf  arm_description.urdf.xacro
src/arm_moveit/: .setup_assistant  package.xml
src/arm_moveit/config/: arm_description.ros2_control.xacro  arm_description.srdf  arm_description.urdf.xacro  gz_bridge.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml
src/arm_moveit/launch/: demo.launch.py  display.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/armikochan_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/armikochan_moveit/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  servo_config.yaml  servo_simulated_config.yaml  trajectory_controllers.yaml  urdf_viz.ros2_control.xacro  urdf_viz.srdf  urdf_viz.urdf.xacro
src/armikochan_moveit/launch/: demo.launch.py  display.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  test.launch.py  (+4 more)
src/cmd_servo_py/: package.xml  setup.cfg  setup.py
src/controller_ps4/: package.xml  setup.cfg  setup.py
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/launch/: servo.launch.py
src/hello_moveit/src/: hello_moveit.cpp  hello_moveit2.cpp  joy_servo.cpp  minimal_servo_twist.cpp  position.txt  ps_mover.cpp  ps_sub.cpp  servo_test.cpp
src/ik_controller/: CMakeLists.txt  package.xml
src/moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robotic-arm-urdf-min.ros2_control.xacro  robotic-arm-urdf-min.srdf  robotic-arm-urdf-min.urdf.xacro  ros2_controllers.yaml
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_arm_controller_test/: CMakeLists.txt  package.xml
src/robotic-arm-urdf-min/: CMakeLists.txt  empty.sdf  package.xml
src/robotic-arm-urdf-min/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/robotic-arm-urdf-min/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL
src/robotic-arm-urdf-min/rviz/: display.rviz
src/robotic-arm-urdf-min/urdf/: robotic-arm-control.xacro  robotic-arm-gazebo.xacro  robotic-arm-urdf-min-v2.urdf.xacro  robotic-arm-urdf-min.csv  robotic-arm-urdf-min.urdf  robotic-arm-urdf-min.urdf.xacro
src/robotic_arm_msgs/: CMakeLists.txt  package.xml
src/rsp_controller/: package.xml  setup.cfg  setup.py
src/self_py_pkg/: package.xml  setup.cfg  setup.py
src/test_armikochan/: .setup_assistant  CMakeLists.txt  package.xml
src/urdf_viz/: CMakeLists.txt  package.xml
src/urdf_viz/config/: joint_names_urdf_viz.yaml
src/urdf_viz/launch/: display.launch.py  gazebo.launch.py
src/urdf_viz/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_8.STL  link_9.STL
src/urdf_viz/urdf/: urdf_viz.csv  urdf_viz.urdf  urdf_viz.urdf.xacro
src/urdf_viz/worlds/: world.sdf
(+80 files in other folders)
