<package format="3">
  <name>urdf_viz</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for urdf_viz.
    This package contains configuration data, 3D models, and launch files
    for the armikochan robot.
  </description>
  <maintainer email="mail@sushant.uk">Sushant Thakur</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>ros_ign_gazebo</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>